FEAT Agregadas dependencias jdbc y logger